# raft-distributed-storage

./: .gitignore  README.md  cluster_config.json  ntp_implementation_suggestion.md  pyproject.toml
proto/: raft.proto  time_sync.proto
scripts/: manage_cluster.py  run_client.py  run_server.py
src/distributed_fs/: time_sync.py
src/distributed_fs/raft/: node.py
